--- a/content.ipynb
+++ b/content.ipynb
@@ -341,37 +341,38 @@
    },
    "source": [
     "---\n",
-    "20240429"
+    "## 20240429"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "resquests使用代理增访问，返回的json信息"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\"storeHouse\":[{\"sourceUrl\":\"http:\\/\\/rihou.vip:6\",\"sourceName\":\"\\u65e5\\u540e\\u4ed3\\u2764\\u65e5\\u540e\\u9b54\\u6539\"},{\"sourceUrl\":\"http:\\/\\/rihou.vip:666\",\"sourceName\":\"\\u5fc3\\u52a8\\u4ed3\\u2764\\u65e5\\u540e\\u9b54\\u6539\"},{\"sourceUrl\":\"http:\\/\\/rihou.vip:55\",\"sourceName\":\"\\u5f00\\u5fc3\\u4ed3\\u2764\\u65e5\\u540e\\u9b54\\u6539\"}]}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "\n",
-    "url=\"http://lige.unaux.com/?url=http://rihou.vip:66/&i=1\"\n",
-    "url1=\"http://rihou.vip:66/\"\n",
+    "url=\"http://lige.unaux.com/?url=http://rihou.vip:66/\"\n",
+    "url2=\"https://cdn.jsdelivr.net/gh/GaiVmao/dianshiyuan@main/yuan2.txt\"\n",
+    "url1=\"http://lige.unaux.com/?url=http://530.my3v.work/xdck.json\"\n",
     "headers = {\n",
     "    \"Host\":\"lige.unaux.com\",\n",
     "    \"User-Agent\":\"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/116.0.0.0 Safari/537.36 Edg/116.0.1938.69\",\n",
     "    \"Connection\":\"keep-alive\",\n",
-    "    \"Content-Type\":\"UTF-8\",\n",
     "    \"Cookie\":\"__test=7ef87e272de085453da709969a222161\"\n",
     "\n",
     "}\n",
-    "response = requests.get(url,headers=headers)\n",
-    "print(response.text)"
+    "response = requests.get(url1,headers=headers)\n",
+    "print(response.json())\n",
+    "print(type(response))\n",
+    "# print(response.content.decode('utf-8'))"
    ]
   },
   {
@@ -383,9 +384,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<!DOCTYPE html>\n",
+      "<html>\n",
+      "<head>\n",
+      "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0\"/>\n",
+      "    <meta http-equiv=\"Content-Type\" content=\"text/html; charset=utf-8\">\n",
+      "    <meta http-equiv=\"pragma\" content=\"no-cache\" />\n",
+      "    <meta http-equiv=\"cache-control\" content=\"no-cache\" />\n",
+      "    <meta http-equiv=\"expires\" content=\"0\" />\n",
+      "    <!--[if lt IE 6]>  \n",
+      "    <style type=\"text/css\">  \n",
+      "    .z3_ie_fix{  \n",
+      "    float:left;  \n",
+      "    }  \n",
+      "    </style>  \n",
+      "    <![endif]-->\n",
+      "    <style type=\"text/css\">   \n",
+      "    body{  \n",
+      "    background:none;  \n",
+      "    }  \n",
+      "    .passport{  \n",
+      "    border:1px solid red;  \n",
+      "    background-color:#FFFFCC;  \n",
+      "    width:400px;  \n",
+      "    height:150px;  \n",
+      "    position:absolute;  \n",
+      "    left:49.9%;  \n",
+      "    top:49.9%;  \n",
+      "    margin-left:-200px;  \n",
+      "    margin-top:-55px;  \n",
+      "    font-size:14px;  \n",
+      "    text-align:center;  \n",
+      "    line-height:30px;  \n",
+      "    color:#746A6A;  \n",
+      "    }  \n",
+      "    .post-content-post {\n",
+      "        border: 1px dashed #F60;\n",
+      "        padding: 10px;\n",
+      "        margin: 10px 0;\n",
+      "        line-height: 200%;\n",
+      "        color: #F00;\n",
+      "        background-color: #FFF4FF;\n",
+      "        overflow: hidden;\n",
+      "        clear: both;\n",
+      "    }\n",
+      "    </style> \n",
+      "</head>\n",
+      "<body>\n",
+      "<div class=\"post-content-post\">\n",
+      "<div class=\"huoduan_hide_box\" style=\"border:10px dashed #F60; padding:10px; margin:10px 0; line-height:200%; color:#F00; background-color:#FFF4FF; overflow:hidden; clear:both;\">\n",
+      "<p style=\"text-align: center;\">\n",
+      "    <img loading=\"lazy\" src=\"./shezhi/0.png\" width=\"280\" height=\"\" class=\"alignnone size-medium img-lazyload\" />\n",
+      "</p>\n",
+      "请输入公众号获取到的密码<form action=\"\" method=\"post\" style=\"margin:0px;\">  \n",
+      "\n",
+      "<input type=\"text\" name=\"password\" placeholder=\"请输入密码\" style=\"border:none;float:left;width:100px; height:32px; line-height:32px; padding:0 5px; border:2px solid #FF6600;-moz-border-radius: 0px; -webkit-border-radius: 0px; border-radius:0px;\"/>\n",
+      "<input type=\"submit\" value=\"下载文件\" style=\"border:none;float:left;width:100px; height:36px; line-height:32px; padding:0 5px; background-color:#F60; text-align:center; border:none; cursor:pointer; color:#FFF;-moz-border-radius: 0px; font-size:14px; -webkit-border-radius: 0px; border-radius:0px;\"/>\n",
+      "</form></br></br>\n",
+      "请输入密码，下载文件  \n",
+      "</div>  \n",
+      "</div>  \n",
+      "</body>  \n",
+      "<script type=\"text/javascript\" src=\"https://js.users.51.la/21590635.js\"></script>\n",
+      "</html>\n",
+      "<!DOCTYPE html>\n",
+      "<html>\n",
+      "<head>\n",
+      "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0\"/>\n",
+      "    <meta http-equiv=\"Content-Type\" content=\"text/html; charset=utf-8\">\n",
+      "    <meta http-equiv=\"pragma\" content=\"no-cache\" />\n",
+      "    <meta http-equiv=\"cache-control\" content=\"no-cache\" />\n",
+      "    <meta http-equiv=\"expires\" content=\"0\" />\n",
+      "    <!--[if lt IE 6]>  \n",
+      "    <style type=\"text/css\">  \n",
+      "    .z3_ie_fix{  \n",
+      "    float:left;  \n",
+      "    }  \n",
+      "    </style>  \n",
+      "    <![endif]-->\n",
+      "    <style type=\"text/css\">   \n",
+      "    body{  \n",
+      "    background:none;  \n",
+      "    }  \n",
+      "    .passport{  \n",
+      "    border:1px solid red;  \n",
+      "    background-color:#FFFFCC;  \n",
+      "    width:400px;  \n",
+      "    height:150px;  \n",
+      "    position:absolute;  \n",
+      "    left:49.9%;  \n",
+      "    top:49.9%;  \n",
+      "    margin-left:-200px;  \n",
+      "    margin-top:-55px;  \n",
+      "    font-size:14px;  \n",
+      "    text-align:center;  \n",
+      "    line-height:30px;  \n",
+      "    color:#746A6A;  \n",
+      "    }  \n",
+      "    .post-content-post {\n",
+      "        border: 1px dashed #F60;\n",
+      "        padding: 10px;\n",
+      "        margin: 10px 0;\n",
+      "        line-height: 200%;\n",
+      "        color: #F00;\n",
+      "        background-color: #FFF4FF;\n",
+      "        overflow: hidden;\n",
+      "        clear: both;\n",
+      "    }\n",
+      "    </style> \n",
+      "</head>\n",
+      "<body>\n",
+      "<div class=\"post-content-post\">\n",
+      "<div class=\"huoduan_hide_box\" style=\"border:10px dashed #F60; padding:10px; margin:10px 0; line-height:200%; color:#F00; background-color:#FFF4FF; overflow:hidden; clear:both;\">\n",
+      "<p style=\"text-align: center;\">\n",
+      "    <img loading=\"lazy\" src=\"./shezhi/0.png\" width=\"280\" height=\"\" class=\"alignnone size-medium img-lazyload\" />\n",
+      "</p>\n",
+      "请输入公众号获取到的密码<form action=\"\" method=\"post\" style=\"margin:0px;\">  \n",
+      "\n",
+      "<input type=\"text\" name=\"password\" placeholder=\"请输入密码\" style=\"border:none;float:left;width:100px; height:32px; line-height:32px; padding:0 5px; border:2px solid #FF6600;-moz-border-radius: 0px; -webkit-border-radius: 0px; border-radius:0px;\"/>\n",
+      "<input type=\"submit\" value=\"下载文件\" style=\"border:none;float:left;width:100px; height:36px; line-height:32px; padding:0 5px; background-color:#F60; text-align:center; border:none; cursor:pointer; color:#FFF;-moz-border-radius: 0px; font-size:14px; -webkit-border-radius: 0px; border-radius:0px;\"/>\n",
+      "</form></br></br>\n",
+      "请输入密码，下载文件  \n",
+      "</div>  \n",
+      "</div>  \n",
+      "</body>  \n",
+      "<script type=\"text/javascript\" src=\"https://js.users.51.la/21590635.js\"></script>\n",
+      "</html>\n",
+      "--------\n",
+      "执行结果是: others---https://cdn.jsdelivr.net/gh/GaiVmao/dianshiyuan@main/yuan2.txt\n",
+      "--------\n",
+      "Close\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import json\n",
@@ -399,9 +537,8 @@
     "\n",
     "def findvalue(respon): #输入respond,判断单仓多仓，返回cang自定义文本\n",
     "    mcang=\"storeHouse\"\n",
-    "    scang=\"{\\\"urls\\\"\"\n",
+    "    scang=\"\\\"urls\\\": [\"\n",
     "    xlu=\"spider\"\n",
-    "\n",
     "    if respon.find(mcang) != -1:\n",
     "        cang = \"H多仓\"#+ respon.find(mcang)\n",
     "    elif respon.find(scang) != -1:\n",
@@ -409,48 +546,53 @@
     "    elif respon.find(xlu) != -1:\n",
     "        cang=\"H线路\"#+respon.find(xlu)\n",
     "    else:\n",
-    "        cang=\"=_H_=不通畅\"\n",
+    "        cang=\"others---\"\n",
     "    return cang\n",
     "\n",
     "def addlink(url): #增加代理链接\n",
     "    agentlink=\"http://fly.lyin.cf/?url=\"\n",
     "    agentlink1=\"http://lige.unaux.com/?url=\"\n",
     "    agentlink0=\"\"\n",
-    "    urll=agentlink0+url\n",
+    "    urll=agentlink1+url\n",
+    "    print(urll)\n",
     "    return urll\n",
     "\n",
-    "def re_findall(url): #返回respone\n",
-    "    try:\n",
-    "        respon=requests.get(addlink(url)).text\n",
-    "        print(respon)\n",
-    "        return respon\n",
-    "    except:\n",
-    "        return \"失败吧 \"+url\n",
+    "\n",
+    "\n",
+    "def re_findall(url): #输入原始url,返回respone\n",
+    "    respon=requests.get(url).text\n",
+    "    print(respon)\n",
+    "    return respon\n",
+    "    # def re_findall(url): #输入原始url,返回respone\n",
+    "    #     try:\n",
+    "    #         respon=requests.get(url).text\n",
+    "    #         print(respon)\n",
+    "    #         return respon\n",
+    "    #     except:\n",
+    "    #         return \"失败了: \"+url\n",
     "#------------------------------------------\n",
-    "url1=\"http://rihou.vip:66/\"  \n",
+    "url1=\"http://rihou.vip:66/\"   #  -花式主页\n",
     "url2=\"http://xn--6orp08a.4tvbox.v6.navy/无敌.json\"     #  -反炸\n",
     "url3=\"https://agit.ai/leevi/PiG/raw/branch/master/jsm.json\"  #  -失败\n",
     "url5=\"https://gitee.com/jiangnandao/tvboxline/raw/master/tvbox.json\" #-单仓\n",
     "url6=\"http://530.my3v.work/xdck.json\" #-单仓\n",
     "url7=\"https://cdn.jsdelivr.net/gh/GaiVmao/dianshiyuan@main/yuan2.txt\" #-单线\n",
     "\n",
-    "# urlink=addlink(url3) #增加代理链接\n",
-    "# print(\"代理路线是: \"+urlink)\n",
-    "\n",
-    "msx=findvalue(re_findall(url1))  #判断单仓多仓,返回cang自定义文本\n",
-    "print(msx)\n",
-    "\n",
-    "if msx==\"H多仓\":\n",
-    "    print(\"多仓zx: \"+urlink)\n",
-    "elif msx==\"H单仓\":\n",
-    "    print(\"单仓zx: \"+urlink)\n",
-    "    for url in extract_urls(re_findall(urlink)) : #寻找批量的列表网址\n",
-    "        print(addlink(url)+\" -- \"+findvalue(re_findall(addlink(url))))\n",
-    "    print(\"----\\n\")\n",
-    "elif msx==\"H线路\":\n",
-    "    print(\"线路通畅zx: \"+urlink)\n",
+    "try:\n",
+    "    export1=re_findall(url1)\n",
+    "    print(export1)\n",
+    "    print(\"--------\")\n",
+    "except Exception as e: \n",
+    "    # pass\n",
+    "    print(\"失败了: \")\n",
     "else:\n",
-    "    print(\"400吧 \"+urlink)"
+    "    # pass\n",
+    "    \n",
+    "    # print(\"ok\")\n",
+    "    print(\"执行结果是: \"+findvalue(export1)+url7)\n",
+    "    print(\"--------\")\n",
+    "finally:       \n",
+    "    print(\"Close\")\n"
    ]
   }
  ],
