--- a/content.ipynb
+++ b/content.ipynb
@@ -613,26 +613,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'strs.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 84\u001b[0m\n\u001b[0;32m     74\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m完成 Close\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     76\u001b[0m \u001b[38;5;66;03m# strs=\"荷城茶秀单接口http://rihou.vip:88/荷城茶秀日后多仓http://rihou.vip:66心动单仓http://rihou.vip:666天天开心主线1http://rihou.vip:55/天天开心天天开心主线2http://rihou.cc:55/天天开心天天开心专线http://www.ttkx.site/天天开心.json追剧影视小白版https://www.123pan.com/s/DYdZVv-Hkcrv.html摸鱼https://摸鱼儿.top多多优选多仓https://duo.codered.cloud/iduo.json好趣网https://jihulab.com/yw88075/tvbox/-/raw/main/dr/js.json春盈天下https://wds.ecsxs.com/230989.json无界https://gitee.com/wj0321/tvlive/raw/main/wj.json宝盒VIPhttps://mirror.ghproxy.com/https://raw.githubusercontent.com/guot55/YGBH/main/vip2.json卧龙资源https://pastebin.com/raw/gtbKvnE1安卓哥私人接口4Khttp://liulian1993.vip:5555/tvbox/lib/ziji/ziji.json拾光4Khttps://ghps.cc/https://raw.githubusercontent.com/xmbjm/vip4K/main/4Kvip.json青木优选仓https://tvbox.aoki.fun精选仓库https://atomgit.com/shangyunvip/yingshicang/raw/master/shangyunvip.json青木精选仓https://tvbox.aoki.fun/selected\"仓库名称\": \"①🥐饭太硬\",\"仓库地址\": \"http://饭太硬.top/tv\"\u001b[39;00m\n\u001b[0;32m     77\u001b[0m \u001b[38;5;66;03m# \"仓库名称\": \"②🎎多多,\"仓库地址\": \"http://yydsys.top/duo\"\u001b[39;00m\n\u001b[0;32m     78\u001b[0m \u001b[38;5;66;03m# \"仓库名称\": \"③🥣多多阿里\",\"仓库地址\": \"http://yydsys.top/duo/ali \"\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     82\u001b[0m \n\u001b[0;32m     83\u001b[0m \u001b[38;5;66;03m# 打开文件并读取内容\u001b[39;00m\n\u001b[1;32m---> 84\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mstrs.txt\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m     85\u001b[0m     content \u001b[38;5;241m=\u001b[39m file\u001b[38;5;241m.\u001b[39mread()\n\u001b[0;32m     86\u001b[0m \u001b[38;5;66;03m# 按照给定的格式分割和输出\u001b[39;00m\n\u001b[0;32m     87\u001b[0m \u001b[38;5;66;03m# lines = content.split('\\n')\u001b[39;00m\n\u001b[0;32m     88\u001b[0m \u001b[38;5;66;03m# for i, line in enumerate(lines):\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     92\u001b[0m \u001b[38;5;66;03m# for url in extract_urls(content) :\u001b[39;00m\n\u001b[0;32m     93\u001b[0m \u001b[38;5;66;03m#     jiexi(url)\u001b[39;00m\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\IPython\\core\\interactiveshell.py:286\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    279\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    280\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    281\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    282\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    283\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    284\u001b[0m     )\n\u001b[1;32m--> 286\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m io_open(file, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'strs.txt'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "import json\n",
-    "import re\n",
+    "import re,os\n",
     "\n",
     "def extract_urls(text): #输入respone,寻找网址,返回列表urls\n",
     "    url_pattern = re.compile(r'http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\\\(\\\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+')\n",
@@ -713,8 +700,10 @@
     "# \"仓库名称\": \"⑦🌟道长\",\"仓库地址\": \"https://pastebin.com/raw/5NHaxyGR\"\"\n",
     "\n",
     "# 打开文件并读取内容\n",
-    "with open('strs.txt', 'r') as file:\n",
+    "with open('strs.txt', 'r', encoding='utf-8') as file:\n",
     "    content = file.read()\n",
+    "    print(content)\n",
+    "\n",
     "# 按照给定的格式分割和输出\n",
     "# lines = content.split('\\n')\n",
     "# for i, line in enumerate(lines):\n",
@@ -723,6 +712,26 @@
     "#         print(f\"# 仓库地址: \\\"{line}\\\"\")\n",
     "# for url in extract_urls(content) :\n",
     "#     jiexi(url)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid character '②' (U+2461) (1624806904.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[20], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    strs=\"\"仓库名称\": \"②🎎多多,\"仓库地址\": \"http://yydsys.top/duo\"\"\u001b[0m\n\u001b[1;37m                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid character '②' (U+2461)\n"
+     ]
+    }
+   ],
+   "source": [
+    "strs=\"\"仓库名称\": \"②🎎多多,\"仓库地址\": \"http://yydsys.top/duo\"\"\n",
+    "strcontent=strs.encode(\"utf-8\")\n",
+    "print(strcontent)\n"
    ]
   }
  ],
