--- a/content.ipynb
+++ b/content.ipynb
@@ -711,89 +711,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 20240507"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://mirror.ghproxy.com/raw.githubusercontent.com/tianya7981/jiekou/main/0322.txt\n",
-      "https://mirror.ghproxy.com/raw.githubusercontent.com/dxawi/0/main/tvlive.txt\n",
-      "http://yydf:abcd@my.540734621.xyz/yydf/\n",
-      "https://raw.githubusercontent.com/gaotianliuyun/gao/master/9918.json\n",
-      "https://pan.shangui.cc/f/KDpQc6/%EF%BB%BF%E8%9A%82%E8%9A%81%E7%AA%9D1%E5%B1%80.txt\n",
-      "https://agit.ai/2011820123/tv/raw/branch/master/tvbox.json\n",
-      "https://d.kstore.space/download/2904/236.txt\n",
-      "http://tv.nxog.top/nxog/ou1.php?b=\n",
-      "http://530.my3v.work/99668.json\n",
-      "http://154.3.2.66:8889/down/YgOQS9WjkF6R.txt\n",
-      "http://530.my3v.work/qm.json\n",
-      "http://tv.nxog.top/nxog/ou1.php?url=http://tv.nxog.top&b=\n",
-      "http://v.nxog.top/jar/live.jpg\n",
-      "http://39.101.135.137:8686/\n",
-      "https://ghps.cc/https://raw.githubusercontent.com/xmbjm/xmbjm/main/xmbjmdc.json\n",
-      "http://530.my3v.work/hxck.json\n",
-      "http://530.my3v.work/xdck.json\n",
-      "http://tvkj.top/DC.txt\n",
-      "http://qrh.yimkj.cn/\n",
-      "https://gitee.com/GK_6_0/json/raw/master/json.txt\n",
-      "https://jihulab.com/jw2/jyf/-/raw/main/jihu.json\n",
-      "https://atomgit.com/xghvrf/Xvbjffc/raw/master/Xboxb.json\n",
-      "https://gh.con.sh/https://raw.githubusercontent.com/xmbjm/xmbjm/main/xmbjmdc.json\n",
-      "https://agit.ai/gk0746/pxy/raw/branch/master/1%e4%bb%93.json\n",
-      "http://w.nxog.top/nxog/ou2.php?url=http://w.nxog.top&xl=1&b=\n",
-      "https://pan.shangui.cc/f/mBYNHb/%E8%9A%82%E8%9A%81%E7%AA%9D2%E5%B1%80.txt\n",
-      "https://pan.shangui.cc/f/X2yqFd/%E8%9A%82%E8%9A%81%E7%AA%9D3%E5%B1%80.txt\n",
-      "https://atomgit.com/66dashun/xiazheng/raw/master/d.json\n",
-      "http://itvbox.cc/tvbox/\n",
-      "http://52bsj.vip:98/wuai\n",
-      "https://jihulab.com/bh666/YGBH/-/raw/main/ygbox.json\n",
-      "http://xhww.fun:63/\n",
-      "http://rihou.cc:88/\n",
-      "https://ghproxy.net/raw.githubusercontent.com/gaotianliuyun/gao/master/js.json\n",
-      "http://52bsj.vip:98/wuai\n",
-      "http://pandown.pro/tvbox/tvbox.json\n",
-      "https://agit.ai/wifi/ts/raw/branch/master/210.bmp\n",
-      "https://agit.ai/Yoursmile7/TVBox/raw/branch/master/XC.json\n",
-      "http://rihou.vip:88/\n",
-      "http://rihou.vip:66\n",
-      "http://rihou.vip:666\n",
-      "http://rihou.vip:55/\n",
-      "http://rihou.cc:55/\n",
-      "http://www.ttkx.site/\n",
-      "https://www.123pan.com/s/DYdZVv-Hkcrv.html\n",
-      "https://duo.codered.cloud/iduo.json\n",
-      "https://jihulab.com/yw88075/tvbox/-/raw/main/dr/js.json\n",
-      "https://wds.ecsxs.com/230989.json\n",
-      "https://gitee.com/wj0321/tvlive/raw/main/wj.json\n",
-      "https://mirror.ghproxy.com/https://raw.githubusercontent.com/guot55/YGBH/main/vip2.json\n",
-      "https://pastebin.com/raw/gtbKvnE1\n",
-      "http://liulian1993.vip:5555/tvbox/lib/ziji/ziji.json\n",
-      "https://ghps.cc/https://raw.githubusercontent.com/xmbjm/vip4K/main/4Kvip.json\n",
-      "https://tvbox.aoki.fun\n",
-      "https://atomgit.com/shangyunvip/yingshicang/raw/master/shangyunvip.json\n",
-      "https://tvbox.aoki.fun/selected\n",
-      "http://yydsys.top/duo\n",
-      "http://yydsys.top/duo/ali\n",
-      "https://jihulab.com/duomv/apps/-/raw/main/fast.json\n",
-      "http://tv.nxog.top/nxog/ou1.php?b=\n",
-      "https://pastebin.com/raw/5NHaxyGR\n",
-      "https://gitee.com/Andyblog/tvbox/raw/main/1.json)\n",
-      "https://gitee.com/Andyblog/tvbox/raw/main/11.json)\n",
-      "https://www.notion.so/fb0344009bb042878a74a1394ae72569?pvs=21)\n",
-      "http://ok321.top/ok\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "import json\n",
@@ -879,6 +807,28 @@
     "for url in extract_urls(content) :\n",
     "    print(url)\n",
     "    # jiexi(url)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "def find_urls(text):\n",
+    "    # 使用正则表达式匹配网址\n",
+    "    url_pattern = re.compile(r'(?i)\\b((?:https?://|www\\d{0,3}[.]|[a-z0-9.\\-]+[.][a-z]{2,4}/)(?:[^\\s()<>]+|\\(([^\\s()<>]+|(\\([^\\s()<>]+\\)))*\\))+(?:\\(([^\\s()<>]+|(\\([^\\s()<>]+\\)))*\\)|[^\\s`!()\\[\\]{};:\\'\".,<>?«»“”‘’]))')\n",
+    "    urls = re.findall(url_pattern, text)\n",
+    "    return urls\n",
+    "with open('strs.txt', 'r', encoding='utf-8') as file:\n",
+    "    content = file.read()\n",
+    "text = \"Hello, please visit the following website: https://www.example.com. Also, check out this one: http://www.example2.com. Don't forget to bookmark them!\"\n",
+    "urls = find_urls(content)\n",
+    "\n",
+    "for url in urls:\n",
+    "    print(url[0])\n"
    ]
   }
  ],
