--- a/content.ipynb
+++ b/content.ipynb
@@ -719,78 +719,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://mirror.ghproxy.com/raw.githubusercontent.com/tianya7981/jiekou/main/0322.txt\n",
-      "https://mirror.ghproxy.com/raw.githubusercontent.com/dxawi/0/main/tvlive.txt\n",
-      "http://yydf:abcd@my.540734621.xyz/yydf/\n",
-      "https://raw.githubusercontent.com/gaotianliuyun/gao/master/9918.json\n",
-      "https://pan.shangui.cc/f/KDpQc6/%EF%BB%BF%E8%9A%82%E8%9A%81%E7%AA%9D1%E5%B1%80.txt\n",
-      "https://agit.ai/2011820123/tv/raw/branch/master/tvbox.json\n",
-      "https://d.kstore.space/download/2904/236.txt\n",
-      "http://tv.nxog.top/nxog/ou1.php?b=\n",
-      "http://530.my3v.work/99668.json\n",
-      "http://154.3.2.66:8889/down/YgOQS9WjkF6R.txt\n",
-      "http://530.my3v.work/qm.json\n",
-      "http://tv.nxog.top/nxog/ou1.php?url=http://tv.nxog.top&b=\n",
-      "http://v.nxog.top/jar/live.jpg\n",
-      "http://39.101.135.137:8686/\n",
-      "https://ghps.cc/https://raw.githubusercontent.com/xmbjm/xmbjm/main/xmbjmdc.json\n",
-      "http://530.my3v.work/hxck.json\n",
-      "http://530.my3v.work/xdck.json\n",
-      "http://tvkj.top/DC.txt\n",
-      "http://qrh.yimkj.cn/\n",
-      "https://gitee.com/GK_6_0/json/raw/master/json.txt\n",
-      "https://jihulab.com/jw2/jyf/-/raw/main/jihu.json\n",
-      "https://atomgit.com/xghvrf/Xvbjffc/raw/master/Xboxb.json\n",
-      "https://gh.con.sh/https://raw.githubusercontent.com/xmbjm/xmbjm/main/xmbjmdc.json\n",
-      "https://agit.ai/gk0746/pxy/raw/branch/master/1%e4%bb%93.json\n",
-      "http://w.nxog.top/nxog/ou2.php?url=http://w.nxog.top&xl=1&b=\n",
-      "https://pan.shangui.cc/f/mBYNHb/%E8%9A%82%E8%9A%81%E7%AA%9D2%E5%B1%80.txt\n",
-      "https://pan.shangui.cc/f/X2yqFd/%E8%9A%82%E8%9A%81%E7%AA%9D3%E5%B1%80.txt\n",
-      "https://atomgit.com/66dashun/xiazheng/raw/master/d.json\n",
-      "http://itvbox.cc/tvbox/\n",
-      "http://52bsj.vip:98/wuai\n",
-      "https://jihulab.com/bh666/YGBH/-/raw/main/ygbox.json\n",
-      "http://xhww.fun:63/\n",
-      "http://rihou.cc:88/\n",
-      "https://ghproxy.net/raw.githubusercontent.com/gaotianliuyun/gao/master/js.json\n",
-      "http://52bsj.vip:98/wuai\n",
-      "http://pandown.pro/tvbox/tvbox.json\n",
-      "https://agit.ai/wifi/ts/raw/branch/master/210.bmp\n",
-      "https://agit.ai/Yoursmile7/TVBox/raw/branch/master/XC.json\n",
-      "http://rihou.vip:88/\n",
-      "http://rihou.vip:66\n",
-      "http://rihou.vip:666\n",
-      "http://rihou.vip:55/\n",
-      "http://rihou.cc:55/\n",
-      "http://www.ttkx.site/\n",
-      "https://www.123pan.com/s/DYdZVv-Hkcrv.html\n",
-      "https://duo.codered.cloud/iduo.json\n",
-      "https://jihulab.com/yw88075/tvbox/-/raw/main/dr/js.json\n",
-      "https://wds.ecsxs.com/230989.json\n",
-      "https://gitee.com/wj0321/tvlive/raw/main/wj.json\n",
-      "https://mirror.ghproxy.com/https://raw.githubusercontent.com/guot55/YGBH/main/vip2.json\n",
-      "https://pastebin.com/raw/gtbKvnE1\n",
-      "http://liulian1993.vip:5555/tvbox/lib/ziji/ziji.json\n",
-      "https://ghps.cc/https://raw.githubusercontent.com/xmbjm/vip4K/main/4Kvip.json\n",
-      "https://tvbox.aoki.fun\n",
-      "https://atomgit.com/shangyunvip/yingshicang/raw/master/shangyunvip.json\n",
-      "https://tvbox.aoki.fun/selected\n",
-      "http://yydsys.top/duo\n",
-      "http://yydsys.top/duo/ali\n",
-      "https://jihulab.com/duomv/apps/-/raw/main/fast.json\n",
-      "http://tv.nxog.top/nxog/ou1.php?b=\n",
-      "https://pastebin.com/raw/5NHaxyGR\n",
-      "https://gitee.com/Andyblog/tvbox/raw/main/1.json)\n",
-      "https://gitee.com/Andyblog/tvbox/raw/main/11.json)\n",
-      "https://www.notion.so/fb0344009bb042878a74a1394ae72569?pvs=21)\n",
-      "http://ok321.top/ok\n"
+      "==============================\n",
+      "执行结果是:单仓 H单仓https://gitee.com/jiangnandao/tvboxline/raw/master/tvbox.json\n",
+      "--------------------\n",
+      "others----https://wds.ecsxs.com/230989.json\n",
+      "H线路-https://pastebin.com/raw/5NHaxyGR\n",
+      "H线路-https://raw.liucn.cc/box/m.json\n",
+      "H线路-https://szyyds.cn/tv/x.json\n",
+      "H线路-https://github.moeyy.xyz/https://raw.githubusercontent.com/xyq254245/xyqonlinerule/main/XYQTVBox.json\n",
+      "H单仓-http://home.jundie.top:81/top98.json\n",
+      "others----https://jihulab.com/ymz1231/xymz/-/raw/main/ymz\n",
+      "H线路-https://github.moeyy.xyz/https://raw.githubusercontent.com/gaotianliuyun/gao/master/js.json\n",
+      "H线路-https://100km.top/0\n",
+      "others----https://jihulab.com/ymz1231/xymz/-/raw/main/ymshaoer\n",
+      "H单仓-https://gitcode.net/u012349622/js/-/raw/master/jsm.json\n",
+      "H线路-http://cdn.qiaoji8.com/tvbox.json\n",
+      "H单仓-https://la.kstore.space/download/3376/ts.txt\n",
+      "others----https://atomgit.com/sky4726/sky7186/raw/main/s.txt\n",
+      "others----https://tvbox.wmmys.cn\n",
+      "H线路-https://download.kstore.space/download/4645/Tvbox/myks/99.png\n",
+      "H线路-https://chuanshuo.77blog.cn/tv.json\n",
+      "others----http://www.wya6.cn/tv/yc.json\n",
+      "H线路-https://xhdwc.tk/0\n",
+      "H单仓-https://tv.youdu.fan:666/\n",
+      "H单仓-https://tv.youdu.fan:666/\n",
+      "H单仓-https://tv.youdu.fan:666/\n",
+      "H单仓-https://tv.youdu.fan:666/\n",
+      "H单仓-https://tv.youdu.fan:666/cy/\n",
+      "H线路-https://tv.youdu.fan:666/PG/\n",
+      "H单仓-https://tv.youdu.fan:666/\n",
+      "H单仓-https://tv.youdu.fan:666/\n",
+      "H单仓-https://tv.youdu.fan:666/\n",
+      "H单仓-https://tv.youdu.fan:666/\n",
+      "H单仓-https://tv.youdu.fan:666/\n",
+      "H单仓-https://tv.youdu.fan:666/\n",
+      "H单仓-https://tv.youdu.fan:666/\n",
+      "H线路-https://kjsc0310.github.io/tvy/s2.json\n",
+      "others----https://raw.iqiq.io/FongMi/CatVodSpider/main/json/config.json\n",
+      "H线路-http://dxawi.github.io/0/0.json\n",
+      "H线路-https://weixine.net/ysc.json\n",
+      "others----https://raw.iqiq.io//tv-player/tvbox-line/main/tv/fj.json\n",
+      "others----https://raw.iqiq.io/XiaoYiChaHang/tvbox/main/ysj.json\n",
+      "H单仓-https://www.lianyingtv.com/fast/fast\n",
+      "H线路-https://download.kstore.space/download/5206/ZJ1.json\n",
+      "H线路-https://download.kstore.space/download/5206/heji3.json\n",
+      "H线路-https://download.kstore.space/download/5206/CCHXJK.json\n",
+      "others----https://download.kstore.space/download/5206/\n",
+      "H线路-https://jihulab.com/a844755785/ts/-/raw/main/shenxian0.json\n",
+      "H单仓-https://download.kstore.space/download/5206/4Kshijie.json\n",
+      "others----https://download.kstore.space/download/5206/\n",
+      "H单仓-https://download.kstore.space/download/5206/top98.json\n",
+      "H单仓-https://download.kstore.space/download/5206/heh.json\n",
+      "H线路-https://jihulab.com/xo2/fty/-/raw/main/xo.json\n",
+      "H线路-https://dxawi.github.io/0/0.json\n",
+      "H线路-http://pandown.pro/tvbox/tvbox.json\n",
+      "others----https://pan.shangui.cc/f/EDj3CD/%E5%BF%83%E5%8A%A8%E9%87%87%E9%9B%86.json\n",
+      "H线路-https://jihulab.com/yw88075/tvbox/-/raw/main/dr/js.json\n",
+      "H线路-https://download.kstore.space/download/2883/m3u8/dsj/guochan/mp1/1.m3u8\n",
+      "others----https://cloud.lxweb.cn/f/YxzdI6/xdcj.json\n",
+      "others----https://pan.shangui.cc/f/gyVYFV/\n",
+      "others----https://gitlab.com/lzc1021lzc/hjfggzs.hjys/-/raw/main/hjys.free.json\n",
+      "H线路-https://jihulab.com/xuanzhuapp/xzys/-/raw/main/xzvip.json\n",
+      "H线路-https://gh.con.sh/https://raw.githubusercontent.com/xmbjm/vip4K/main/4Kvip.json\n",
+      "H线路-https://cf.weixine.net/ysc.json\n",
+      "others----https://raw.iqiq.io/liu673cn/box/main/m.json\n",
+      "others----https://atomgit.com/dwc8/12/raw/master/dc.json\\n\n",
+      "----\n",
+      "\n",
+      "==============================\n",
+      "完成 Close\n"
      ]
     }
    ],
@@ -870,6 +874,15 @@
     "    finally:       \n",
     "        print(\"完成 Close\")\n",
     "\n",
+    "jiexi(url5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 打开文件并读取内容\n",
     "with open('strs.txt', 'r', encoding='utf-8') as file:\n",
     "    content = file.read()\n",
@@ -878,7 +891,118 @@
     "\n",
     "for url in extract_urls(content) :\n",
     "    print(url)\n",
-    "    # jiexi(url)\n"
+    "    # jiexi(url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==============================\n",
+      "执行结果是:单仓 H单仓https://gitee.com/jiangnandao/tvboxline/raw/master/tvbox.json\n",
+      "==============================\n",
+      "完成 Close\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "import re,os\n",
+    "#\thttp[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\\\(\\\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+\n",
+    "def extract_urls(text): #输入respone,寻找网址,返回列表urls\n",
+    "    url_pattern = re.compile(r'http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\\\(\\\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+')\n",
+    "    urls = url_pattern.findall(text)\n",
+    "    return urls\n",
+    "\n",
+    "def findvalue(respon): #输入respond,判断单仓多仓，返回cang自定义文本\n",
+    "    mcang=\"storeHouse\"\n",
+    "    scang=\"\\\"urls\\\": [\"\n",
+    "    xlu=\"spider\"\n",
+    "    if respon.find(mcang) != -1:\n",
+    "        cang = \"H多仓\"#+ respon.find(mcang)\n",
+    "    elif respon.find(scang) != -1:\n",
+    "        cang=\"H单仓\" #+respon.find(scang)\n",
+    "    elif respon.find(xlu) != -1:\n",
+    "        cang=\"H线路\"#+respon.find(xlu)\n",
+    "    else:\n",
+    "        cang=\"others---\"\n",
+    "    return cang\n",
+    "\n",
+    "def addlink(url): #增加代理链接\n",
+    "    agentlink=\"http://fly.lyin.cf/?url=\"\n",
+    "    agentlink1=\"http://lige.unaux.com/?url=\"\n",
+    "    agentlink0=\"\"\n",
+    "    urll=agentlink1+url\n",
+    "    print(urll)\n",
+    "    return urll\n",
+    "\n",
+    "def re_findall(url): #输入原始url,返回respone\n",
+    "    try:\n",
+    "        respon=requests.get(url).text\n",
+    "        # print(respon)\n",
+    "        return respon\n",
+    "    except:\n",
+    "        return \"失败了: \"+url\n",
+    "\n",
+    "url1=\"http://rihou.vip:66/\"   #  -花式主页\n",
+    "url2=\"http://xn--6orp08a.4tvbox.v6.navy/无敌.json\"     #  -反炸\n",
+    "url3=\"https://agit.ai/leevi/PiG/raw/branch/master/jsm.json\"  #  -失败\n",
+    "url5=\"https://gitee.com/jiangnandao/tvboxline/raw/master/tvbox.json\" #-单仓\n",
+    "url6=\"http://530.my3v.work/xdck.json\" #-单仓\n",
+    "url7=\"https://cdn.jsdelivr.net/gh/GaiVmao/dianshiyuan@main/yuan2.txt\" #-单线\n",
+    "url8=\"https://raw.githubusercontent.com/xiqiliuse/tvbox/main/tvbox.json\"\n",
+    "url9=\"http://gh.whoneil.top/https://raw.githubusercontent.com/xiqiliuse/tvbox/main/tvbox.json\"\n",
+    "\n",
+    "def jiexi(urll):\n",
+    "    try:\n",
+    "        exresponse=re_findall(urll)\n",
+    "        # print(exresponse)\n",
+    "        print(\"=\"*30)\n",
+    "    except Exception as e: \n",
+    "        # pass\n",
+    "        print(\"失败了: \")\n",
+    "    else:\n",
+    "        if findvalue(exresponse)==\"H单仓\":\n",
+    "            print(\"执行结果是:单仓 \"+findvalue(exresponse)+urll)\n",
+    "            # print(\"-\"*20)\n",
+    "            # for url in extract_urls(exresponse) : #寻找批量的列表网址\n",
+    "            #     # print(addlink(url)+\" -- \"+findvalue(re_findall(addlink(url))))\n",
+    "            #     print(findvalue(re_findall(url))+\"-\"+(url))\n",
+    "            # print(\"----\\n\")\n",
+    "\n",
+    "        elif findvalue(exresponse)==\"H多仓\":\n",
+    "            print(\"执行结果是:多仓 \"+findvalue(exresponse)+urll)\n",
+    "        elif findvalue(exresponse)==\"H线路\":\n",
+    "            print(\"执行结果是:线路  \"+findvalue(exresponse)+urll)\n",
+    "        else:\n",
+    "            print(\"其他failure\")\n",
+    "        print(\"=\"*30)\n",
+    "    finally:       \n",
+    "        print(\"完成 Close\")\n",
+    "\n",
+    "jiexi(url5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "urlss=\"\""
    ]
   }
  ],
