--- a/content2.ipynb
+++ b/content2.ipynb
@@ -23,6 +23,9 @@
       "执行结果是:单仓 http://xn--6orp08a.4tvbox.v6.navy/无敌.json\n",
       "==============================\n",
       "其他failure https://agit.ai/leevi/PiG/raw/branch/master/jsm.json\n",
+      "==============================\n",
+      "首次解析的网址返回状态： 200\n",
+      "执行结果是:单仓 https://gitee.com/jiangnandao/tvboxline/raw/master/tvbox.json\n",
       "==============================\n"
      ]
     }
