--- a/content2.ipynb
+++ b/content2.ipynb
@@ -26,6 +26,8 @@
       "==============================\n",
       "首次解析的网址返回状态： 200\n",
       "执行结果是:单仓 https://gitee.com/jiangnandao/tvboxline/raw/master/tvbox.json\n",
+      "==============================\n",
+      "其他failure https://raw.githubusercontent.com/xiqiliuse/tvbox/main/tvbox.json\n",
       "==============================\n"
      ]
     }
@@ -81,6 +83,7 @@
     "            print(\"代理后的网址返回状态： \"+str(codema))\n",
     "            return respon\n",
     "        except:\n",
+    "            print(\"解析失败： \"+url)\n",
     "            return \"解析失败了: \"+url\n",
     "\n",
     "url1=\"http://rihou.vip:66/\"   #  -花式主页\n",
