--- a/content.ipynb
+++ b/content.ipynb
@@ -1148,16 +1148,264 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "200\n",
       "==============================\n",
-      "其他failure https://gitee.com/jiangnandao/tvboxline/raw/master/tvbox.json\n",
-      "==============================\n"
+      "执行结果是:单仓 H单仓https://gitee.com/jiangnandao/tvboxline/raw/master/tvbox.json\n",
+      "==============================\n",
+      "|-https://agit.ai/pinghui/xinghe/raw/branch/master/mayicang.txt\n",
+      "|-https://www.ywsj.cf/upload/2023/10/yyzq4k.json\n",
+      "|-http://8.210.232.168/xc.json\n",
+      "|-http://饭太硬.top/tv\n",
+      "|-http://我不是.肥猫.love:63\n",
+      "|-https://gitee.com/shenxian2023/web/raw/master/sx.json\n",
+      "|-http://www.xzam.cn/xiaohu\n",
+      "|-https://tvbox.meitufu.com/TVBox/tv.json\n",
+      "|-https://yydsys.top/duo\n",
+      "|-http://小盒酷玩.fun:66/\n",
+      "|-https://download.kstore.space/download/3313/app/ymzn\n",
+      "|-ttps://jihulab.com/zhulr7765/tvbox/-/raw/main/tv.txt?ref_type=heads\n",
+      "|-https://raw.gitmirror.com/yydfys/yydf/main/yydf/yydf.json\n",
+      "|-https://weixine.net/ysc.json\n",
+      "|-https://cf.weixine.net/ysc.json\n",
+      "|-http://52bsj.vip:98/cl\n",
+      "|-https://wds.ecsxs.com/230989.json\n",
+      "|-https://agit.ai/ddx/nmys/raw/branch/master/feimao.json\n",
+      "|-https://s2.pub/xmbjmxdc\n",
+      "|-https://agit.ai/cyl518/yl/raw/branch/master/pytv.json\n",
+      "|-https://jihulab.com/yw88075/tvbox/-/raw/main/dr/js.json\n",
+      "|-https://atomgit.com/xghvrf/Xvbjffc/raw/master/xbfbe.json\n",
+      "|-https://tvbox.cainisi.cf\n",
+      "|-http://rihou.vip:88/荷城茶秀\n",
+      "|-http://itvbox.cc/tvbox/云星日记/1.m3u8\n",
+      "|-https://agit.ai/Yoursmile7/TVBox/raw/branch/master/XC.json\n",
+      "|-http://meowtv.cn/tv\n",
+      "|-https://pastebin.com/raw/5NHaxyGR\n",
+      "|-http://svip.weixine.net:88/uploads/itvbox/svip.json\n",
+      "|-http://xn--yety82d.love/\n",
+      "|-http://xhww.fun:63/小米/DEMO.json\n",
+      "|-https://atomgit.com/iduo/DDBox/raw/master/duo.json\n",
+      "|-http://rihou.vip:55/\n",
+      "|-http://home.jundie.top:81/top98.json\n",
+      "|-http://rihou.cc:88/\n",
+      "|-https://cn.kstore.space/download/2863/01.txt\n",
+      "|-http://xiaohu.xzam.cn/xiaohu\n",
+      "|-https://ghproxy.net/https://raw.githubusercontent.com/gaotianliuyun/gao/master/js.jsonkvymin\n",
+      "|-https://agit.ai/kvymin/TVBox/raw/branch/master/Pandora.json\n",
+      "|-https://agit.ai/n/b/raw/branch/a/b/c.json\n",
+      "|-http://52pan.top:81/api/v3/file/get/174964/%E5%90%BE%E7%88%B1%E8%AF%84%E6%B5%8B.m3u?sign=rPssLoffquDXszCARt6UNF8MobSa1FA27XomzOluJBY%3D%3A0\n",
+      "|-http://yydf.540734621.xyz/yydf/yydf/bd/yydf.jsonzzz1\n",
+      "|-https://agit.ai/mmmgit/tvbox/raw/branch/main/zzz1.json\n",
+      "|-https://agit.ai/cyl518/yl/raw/branch/master/ml.json\n",
+      "|-https://www.lianyingtv.com/fast/fast\n",
+      "|-https://gh.con.sh/https://raw.githubusercontent.com/xmbjm/vip4K/main/4Kvip.json\n",
+      "|-https://gh.con.sh/https://raw.githubusercontent.com/xmbjm/xmbjmjk/main/xmbjm.json\n",
+      "|-https://o.nxog.top/nxog/nxog1.php?b=欧歌\n",
+      "|-https://o.nxog.top/nxog/ou1.php?b=欧歌\n",
+      "|-https://w.nxog.top/nxog/nxog1.php?b=欧歌\n",
+      "|-https://w.nxog.top/nxog/ou1.php?b=欧歌\n",
+      "|-https://nxog.eu.org/nxog/nxog1.php?b=欧歌\n",
+      "|-https://nxog.eu.org/nxog/ou1.php?b=欧歌\n",
+      "|-https://atomgit.com/hengxing/hx/raw/master/hxzck.txt\n",
+      "|-https://ghproxy.net/https://raw.githubusercontent.com/ZTHA000/tvbox/main/gyck.json\n",
+      "|-https://gh-proxy.com/https://raw.githubusercontent.com/gaotianliuyun/gao/master/js.json\n",
+      "|-http://sinopacifichk.com/box/56.txt\n",
+      "|-https://la.kstore.space/download/3376/xpg.txt\n",
+      "|-https://agit.ai/XiaoYiChaHang/xxzb/raw/branch/master/ysj.json\n",
+      "|-https://agit.ai/sejinan/app/raw/branch/box/yu\n",
+      "|-https://ghproxy.com/https://raw.githubusercontent.com/mengzehe/tvbox/main/%E8%87%AA%E7%94%A8%E5%A4%9A%E4%BB%93\n",
+      "|-https://raw.liucn.cc/box/dc.txt\n",
+      "|-https://www.agit.ai/hu/hcr/raw/branch/master/99668.txt\n",
+      "|-https://ghproxy.com/https://raw.githubusercontent.com/yyfxz/yyrh/main/fxz.json\n",
+      "|-http://yydf.540734621.xyz/yydf/yydf/yydf.json\n",
+      "|-https://gh-proxy.com/https://raw.githubusercontent.com/yydfys/yydf/main/yydf/yydfjk.json\n",
+      "|-https://atomgit.com/66dashun/xiazheng/raw/master/d.json\n",
+      "|-http://wl.iptv8.top/wl/a/1706600423.txt\n",
+      "|-https://肥猫.live/\n",
+      "|-https://agit.ai/ddx/TVBox/raw/branch/master/d.json\n",
+      "|-https://tvkj888.cn/tvys/svip.json\n",
+      "|-https://qixing.myhkw.com/DC.txt\n",
+      "|-https://qixing.myhkw.com/tianwei/svip.json\n",
+      "|-http://tvkj.top/DC.txt\n",
+      "|-http://39.101.135.137:8686\n",
+      "|-https://gitee.com/guot54/YGBH777/raw/main/dc2.json\n",
+      "|-https://gitee.com/guot54/YGBH777/raw/main/ygbox.json\n",
+      "|-https://gh.con.sh/https://raw.githubusercontent.com/guot55/yg/main/dc2.json\n",
+      "|-http://39.101.135.137:8080/\n",
+      "|-https://notabug.org/afecc/tvbox/raw/main/dfy.json\n",
+      "|-https://notabug.org/kite/wind/raw/master/wind.json\n",
+      "|-https://mirror.ghproxy.com/https://raw.githubusercontent.com/yudengcheng/ydcbox/main/ydc.json\n",
+      "|-http://mdxgh.dynv6.net/\n",
+      "|-https://gitee.com/wj0321/tvlive/raw/main/wj.json\n",
+      "|-http://我不是.摸鱼儿.top\n",
+      "|-https://download.kstore.space/download/4645/Tvbox/myks/99.png\n",
+      "|-https://agit.ai/xx03253/xxu/raw/branch/main/xxtv.json\n",
+      "|-https://agit.ai/abkier/tvbox-jihu/raw/branch/main/tv.txt\n",
+      "|-https://agit.ai/asdz324/TVBox2/raw/branch/main/api.json\n",
+      "|-https://notabug.org/kite/feng/raw/master/feng.json\n",
+      "|-https://cdn.jsdelivr.net/gh/GaiVmao/dianshiyuan@main/yuan2.txt\n",
+      "|-https://agit.ai/hu/hcr/raw/branch/master/99668.txt\n",
+      "|-https://pastebin.com/raw/sbPpDm9G\n",
+      "|-https://kjsc0310.github.io/tvy/jk9.json\n",
+      "|-http://home.jundie.top:81/TVBox/yosakoi.json\n",
+      "|-https://wsl201.github.io/mao/mao6.json\n",
+      "|-https://gh.con.sh/https://raw.githubusercontent.com/xmbjm/xmbjm/main/xmbjmdc.json\n",
+      "|-http://530.my3v.work/f.json\n",
+      "|-http://wl.iptv8.top/wl/a/1706450321.txt\n",
+      "|-http://ztha.top/TVBox/thdjk.json\n",
+      "|-http://530.my3v.work/99668.json\n",
+      "|-https://mirror.ghproxy.com/https://raw.githubusercontent.com/xiaolinshao/linshao/main/1.json\n",
+      "|-https://agit.ai/gk0746/pxy/raw/branch/master/1%e4%bb%93.json\n",
+      "|-http://w.nxog.top/nxog/ou2.php?url=http://w.nxog.top&xl=1&b=欧歌\n",
+      "|-https://pan.shangui.cc/f/mBYNHb/%E8%9A%82%E8%9A%81%E7%AA%9D2%E5%B1%80.txt\n",
+      "|-https://pan.shangui.cc/f/X2yqFd/%E8%9A%82%E8%9A%81%E7%AA%9D3%E5%B1%80.txt\n",
+      "|-https://cdn.magiclee.cn/jk/🚀无意云线/api.json\n",
+      "|-https://cdn.magiclee.cn/jk/🚀云星日记/api.json\n",
+      "|-https://cdn.magiclee.cn/jk/🚀春盈天下/api.json\n",
+      "|-https://cdn.magiclee.cn/jk/🚀喵影视线/api.json\n",
+      "|-https://cdn.magiclee.cn/jk/🚀肥猫本地/api.json\n",
+      "|-https://cdn.magiclee.cn/jk/🚀少儿频道/api.json\n",
+      "|-https://mirror.ghproxy.com/raw.githubusercontent.com/tianya7981/jiekou/main/0322.txt\n",
+      "|-https://mirror.ghproxy.com/raw.githubusercontent.com/dxawi/0/main/tvlive.txt\n",
+      "|-http://yydf:abcd@my.540734621.xyz/yydf/猫源.json\n",
+      "|-https://raw.githubusercontent.com/gaotianliuyun/gao/master/9918.json\n",
+      "|-https://pan.shangui.cc/f/KDpQc6/%EF%BB%BF%E8%9A%82%E8%9A%81%E7%AA%9D1%E5%B1%80.txt\n",
+      "|-https://agit.ai/2011820123/tv/raw/branch/master/tvbox.json\n",
+      "|-https://d.kstore.space/download/2904/236.txt\n",
+      "|-http://tv.nxog.top/nxog/ou1.php?b=欧歌\n",
+      "|-http://154.3.2.66:8889/down/YgOQS9WjkF6R.txt\n",
+      "|-http://530.my3v.work/qm.json\n",
+      "|-http://tv.nxog.top/nxog/ou1.php?url=http://tv.nxog.top&b=装B小宋哥直播1http://v.nxog.top/jar/live.jpg\n",
+      "|-http://39.101.135.137:8686/\n",
+      "|-https://ghps.cc/https://raw.githubusercontent.com/xmbjm/xmbjm/main/xmbjmdc.json\n",
+      "|-http://530.my3v.work/hxck.json\n",
+      "|-http://530.my3v.work/xdck.json\n",
+      "|-http://qrh.yimkj.cn/壹梦多仓.json\n",
+      "|-https://gitee.com/GK_6_0/json/raw/master/json.txt\n",
+      "|-https://jihulab.com/jw2/jyf/-/raw/main/jihu.json\n",
+      "|-https://atomgit.com/xghvrf/Xvbjffc/raw/master/Xboxb.json\n",
+      "|-http://肥猫.live\n",
+      "|-http://52bsj.vip:98/wuai\n",
+      "|-https://jihulab.com/bh666/YGBH/-/raw/main/ygbox.json\n",
+      "|-http://rihou.cc:88/荷城茶秀\n",
+      "|-http://我不是.肥猫.love:63/接口禁止贩卖\n",
+      "|-https://ghproxy.net/raw.githubusercontent.com/gaotianliuyun/gao/master/js.json\n",
+      "|-http://pandown.pro/tvbox/tvbox.json\n",
+      "|-https://神器每日推送.tk/pz.json\n",
+      "|-https://agit.ai/wifi/ts/raw/branch/master/210.bmp\n",
+      "|-http://rihou.vip:66\n",
+      "|-http://rihou.vip:666\n",
+      "|-http://rihou.vip:55/天天开心\n",
+      "|-http://rihou.cc:55/天天开心\n",
+      "|-http://www.ttkx.site/天天开心.json\n",
+      "|-https://www.123pan.com/s/DYdZVv-Hkcrv.html\n",
+      "|-https://摸鱼儿.top\n",
+      "|-https://duo.codered.cloud/iduo.json\n",
+      "|-https://mirror.ghproxy.com/https://raw.githubusercontent.com/guot55/YGBH/main/vip2.json\n",
+      "|-https://pastebin.com/raw/gtbKvnE1\n",
+      "|-http://liulian1993.vip:5555/tvbox/lib/ziji/ziji.json\n",
+      "|-https://ghps.cc/https://raw.githubusercontent.com/xmbjm/vip4K/main/4Kvip.json\n",
+      "|-https://tvbox.aoki.fun\n",
+      "|-https://atomgit.com/shangyunvip/yingshicang/raw/master/shangyunvip.json\n",
+      "|-https://tvbox.aoki.fun/\n",
+      "|-http://yydsys.top/duo\n",
+      "|-http://yydsys.top/duo/ali\n",
+      "|-https://jihulab.com/duomv/apps/-/raw/main/fast.json\n",
+      "|-https://gitee.com/Andyblog/tvbox/raw/main/1.json\n",
+      "|-https://gitee.com/Andyblog/tvbox/raw/main/11.json\n",
+      "|-http://ok321.top/ok\n",
+      "|-https://d.kstore.space/download/6932/测试.txt\n",
+      "|-https://d.kstore.space/download/6932/吴强.json\n",
+      "|-https://mirror.ghproxy.com/https://raw.githubusercontent.com/tianya7981/jiekou/main/0709\n",
+      "|-https://mirror.ghproxy.com/https://raw.githubusercontent.com/supermeguo/BoxRes/main/Myuse/lemon.json\n",
+      "|-http://tvbox.xn--4kq62z5rby2qupq9ub.xyz/\n",
+      "|-http://z.qiqiv.cn/123.txt\n",
+      "|-https://gitee.com/hailin886/fty/raw/master/tvbox/aishang.json\n",
+      "|-http://itvbox.cc/tvbox/云星日记/1.m3u8\n",
+      "|-http://饭太硬.top/tv🐼思牧丨肥猫肥猫\n",
+      "|-https://tvbox.aoki.fun/selected\n",
+      "|-http://jk.itvbox.cc:66/可视TV/云星日记/仓库/api.json\n",
+      "|-http://小盒酷玩\n",
+      "|-https://hfr1107.top/api/box/?jm=https://raw.githubusercontent.com/gaotianliuyun/gao/master/9918.json\n",
+      "|-https://mirror.ghproxy.com/https://raw.githubusercontent.com/supermeguo/BoxRes/main/Myuse/catcr.json\n",
+      "|-http://8.210.232.168/xclive.txt\n",
+      "|-https://wds.ecsxs.com/230864.json\n",
+      "|-https://pan.shangui.cc/f/4aRLC0/顺溜TV.txt\n",
+      "|-https://mirror.ghproxy.com/raw.githubusercontent.com/ssili126/tv/main/itvlist.txt\n",
+      "|-http://我不是.肥猫.live/TV/tvzb.txt\n",
+      "|-http://124.223.177.85:88/svip/%E7%9B%B4%E6%92%AD%E6%8C%BA%E5%BF%AB.txt\n",
+      "|-http://home.jundie.top:81/Cat/tv/live.txt\n",
+      "|-https://my5353.com/sftxl1\n",
+      "|-https://my5353.com/sftxl2\n",
+      "|-http://itvbox.cc/tvbox/云星日记/1.m3u8\n",
+      "|-https://github.moeyy.xyz/https://raw.githubusercontent.com/xyq254245/xyqonlinerule/main/XYQTVBox.json\n",
+      "|-http://rihou.cc:88/荷城茶秀\n",
+      "|-https://agit.ai/leevi/PiG/raw/branch/master/jsm.json\n",
+      "|-http://www.liuyunw.com:88/img\n",
+      "|-https://notabug.org/qizhen15800/My9394/raw/master/%e4%b8%8d%e8%89%af%e5%b8%85.json\n",
+      "|-https://ghproxy.net/https://raw.githubusercontent.com/gaotianliuyun/gao/master/js.json\n",
+      "|-http://www.wya6.cn/tv/yc.json\n",
+      "|-https://tvbox.cainisi.cf\n",
+      "|-http://bp.tvbox.cam\n",
+      "|-https://gitee.com/zhaodehe/qlkj/raw/master/ql.json\n",
+      "|-https://agit.ai/hu/hcr/raw/branch/master/短剧.json\n",
+      "|-https://szyyds.cn/tv/x.json\n",
+      "|-https://agit.ai/leevi/xpg/raw/branch/master/api.json\n",
+      "|-https://download.kstore.space/download/2883/nzk/nzk0722.json\n",
+      "|-http://tvbox.王二小放牛娃.xyz\n",
+      "|-https://agit.ai/Yoursmile7/TVBox/raw/branch/master/XC.json\n",
+      "|-https://agit.ai/ddx/TVBox/raw/branch/master/t4.json\n",
+      "|-https://100km.top/0\n",
+      "|-https://s2.pub/cally\n",
+      "|-https://agit.ai/lcx/11/raw/branch/master/12\n",
+      "|-https://pan.shangui.cc/f/4LBAF0/ali.json\n",
+      "|-https://pan.shangui.cc/f/mPecb/%E9%87%87%E9%9B%86.json\n",
+      "|-https://agit.ai/relax/adcc/raw/branch/master/tvbox.json\n",
+      "|-http://cdn.qiaoji8.com/tvbox.json\n",
+      "|-https://gh.con.sh/https://raw.githubusercontent.com/xmbjm/vip4K/main/4Kvip.json\n",
+      "|-https://raw.gitmirror.com/yw88075/tvbox/main/dr/js.json\n",
+      "|-https://download.kstore.space/download/2883/1022tv.json\n",
+      "|-http://tv.nxog.top/m/111.php?ou=公众号欧歌app&mz=index2&jar=index2&123&b=欧歌\n",
+      "|-http://jxym.ygx888.com/vip/api.json\n",
+      "|-https://agit.ai/376242575/zzh/raw/branch/master/txt/影视.txt\n",
+      "|-http://9xi4o.tk/0725.json\n",
+      "|-https://agit.ai/Jonwall/Box/raw/branch/a/T20.json\n",
+      "|-http://ok321.top/ok\n",
+      "|-https://agit.ai/66666/mao/raw/branch/master/00/000.m3u8\n",
+      "|-https://agit.ai/hu/hcr/raw/branch/master/py3.txt\n",
+      "|-https://mirror.ghproxy.com/https://raw.githubusercontent.com/bizhangjie/CatVodSpider/main/json/index18.json\n",
+      "|-https://gitee.com/linjun1001/tvbox/raw/master/tw.txt\n",
+      "|-http://xhztv.top/xhz.json\n",
+      "|-http://xhztv.top/4k.json\n",
+      "|-http://tvkj.top/DC/tvys/svip.json\n",
+      "|-http://tv.nxog.top/m/111.php?ou=%E6%AC%A7%E6%AD%8C&mz=index2&xl=&jar=index2\n",
+      "|-https://szyyds.cn/tv/x.jsondxawi/0\n",
+      "|-https://xhdwc.tk/0\n",
+      "|-http://xhztv.top/tvbox.txt\n",
+      "|-https://tv.youdu.fan:666\n",
+      "|-https://youdu.fan/DC.txt\n",
+      "|-https://weixine.net/api.json\n",
+      "|-https://cf.weixine.net/api.json\n",
+      "|-http://tv.nxog.top/肥猫\n",
+      "|-http://肥猫.live/饭太硬\n",
+      "|-https://饭太硬.top/\n",
+      "|-https://youdu.fan/\n",
+      "|-https://www.lige.fit/\n",
+      "|-https://d.kstore.space/download/5147/duoxianlu.json\n",
+      "|-https://gitlab.com/xmbjm/dc/-/raw/main/T4.json\n",
+      "|-https://gitlab.com/xmbjm/omg/-/raw/main/omg.json\n",
+      "|-https://gitlab.com/xmbjm/dc/-/raw/main/sgdc.json\n",
+      "|-http://tvbox.clbug.com/\n",
+      "|-http://tv.hfr.free.nf/api/jm/jm.html?i=1\n",
+      "|-http://xktv6.icu/d\n",
+      "|-http://xktv6.icu/x\n",
+      "|-http://xktv6.icu/live\n"
      ]
     }
    ],
@@ -1241,11 +1489,11 @@
     "\n",
     "jiexi(url5)\n",
     "# 打开文件并读取内容\n",
-    "# with open('strs.txt', 'r', encoding='utf-8') as file:\n",
+    "with open('strs.txt', 'r', encoding='utf-8') as file:\n",
     "#     # content = file.read()\n",
     "#     # print(content)\n",
-    "#     # for line in file:\n",
-    "#         # print(\"|-\"+line.strip())\n",
+    "    for line in file:\n",
+    "        print(\"|-\"+line.strip())\n",
     "#         # jiexi(line)"
    ]
   },
