--- a/content2.ipynb
+++ b/content2.ipynb
@@ -1710,6 +1710,119 @@
     "\n",
     "# re_findall(url4)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "import re,os\n",
+    "\n",
+    "def refindvalue(respon): #输入respond,re正则判断单仓多仓，返回cang自定义文本\n",
+    "    #mcang=re.search('storeHouse',respon,re.M|re.I).group()\n",
+    "    #scang = re.search('urls',respon,re.M|re.I).group()\n",
+    "    #xlu = re.search('sites',respon,re.M|re.I).group()\n",
+    "    try: #正常的操作\n",
+    "        mcang = re.search('storeHouse',respon,re.M|re.I).group()\n",
+    "    except :#发生异常，执行这块代码\n",
+    "        try:\n",
+    "            scang = re.search('urls',respon,re.M|re.I).group()\n",
+    "        except:#发生异常，执行这块代码\n",
+    "            try:\n",
+    "                xlu = re.search('sites',respon,re.M|re.I).group()\n",
+    "            except:#发生异常，执行这块代码\n",
+    "                return \"正则失败\"\n",
+    "            else: #如果没有异常执行这块代码\n",
+    "                return \"H线路\"\n",
+    "        else:\n",
+    "            return \"H单仓\"\n",
+    "    else:\n",
+    "        return \"H多仓\"\n",
+    "    \n",
+    "def addlink(url): #增加代理链接\n",
+    "    agentlink=\"http://fly.lyin.cf/?url=\"\n",
+    "    agentlink1=\"http://lige.unaux.com/?url=\"\n",
+    "    agentlink0=\"\"\n",
+    "    urll=agentlink1+url\n",
+    "    # print(\"代理网址： \"+urll)\n",
+    "    return urll\n",
+    "\n",
+    "def re_findall(url): #输入原始url,解析网站，返回url，respone等元组\n",
+    "    headers={\n",
+    "    \"Cookie\":\"Hm_lvt_d815f2e1f682c86565c1063aafaef292=1715176162; Hm_lpvt_d815f2e1f682c86565c1063aafaef292=1715176162; tfstk=fxg2k1gSVEL2a_igU8aaUOQXoJ4YWypCbVw_sfV4e-4scq_Z4XMWMi_ssRkZF8HaXIe_IRkssmOWReGxMPUg7pTBRYdKSDg4IOagkckz-p9BRUGxMPUMdc6Dftlz68fcjoDgru281Z4gnlXlqW2uIP4iI74uTSfcmZqGZ7DZTXhNG5ZDHRmfw4bLXoyngkQG747Q0Jc0UNV-zS7gKj2PSNwY5nQEaj9VJbaxZvPIhUbqLbGIku3wLErxrXu80VCN2bZL3z2xcK78gxGZ8u0D16wmyf0L4y-Od83tZDZL-tj0Try4xqD5sB40j540Hm9VySkj_2rooCsQwcD-7raHJt2sVXua_Vp9zvlSOqE-7p8l4NBTZ0ZxWmWGboV8aJOyZMO1RXe6S7PCXGEYo7yBizIGj9QN5iu6ZGITDWVzdI4O.; __test=1af893b932aa21ad543a801402580fba\",\n",
+    "    \"Host\":\"lige.unaux.com\",\n",
+    "    \"User-Agent\":\"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/124.0.0.0 Safari/537.36\",\n",
+    "    \"Connection\":\"keep-alive\"\n",
+    "    }\n",
+    "    proxy_url=addlink(url)  #增加代理函数\n",
+    "    try:\n",
+    "        respon=requests.get(url,headers=headers)\n",
+    "        codema= respon.status_code\n",
+    "        if codema==200:\n",
+    "            # print(\"首次解析的网址返回状态： \"+str(codema)+\"- \"+url)\n",
+    "            conten=\"首次解析状态:\"+str(codema)\n",
+    "            return url,respon.text,conten\n",
+    "        else:\n",
+    "            respon1=requests.get(proxy_url,headers=headers)  #增加代理1函数\n",
+    "            codema1= respon1.status_code\n",
+    "            # print(\"代理1网址返回状态： \"+str(codema)+\"- \"+proxy_url)\n",
+    "            conten1=\"代理1网址状态: \"+str(codema1)\n",
+    "            return proxy_url,respon1.text,conten1\n",
+    "    except:\n",
+    "        try:\n",
+    "            respon2=requests.get(proxy_url,headers=headers)  #增加代理2函数\n",
+    "            codema2= respon2.status_code,conten\n",
+    "            # print(\"代理2网址返回状态： \"+str(codema)+\"- \"+proxy_url)\n",
+    "            conten2=\"代理2网址状态: \"+str(codema2)\n",
+    "            return proxy_url,respon2.text,conten2\n",
+    "        except:\n",
+    "            # print(\"解析失败： \"+url)\n",
+    "            return url,\"000\",\"解析失败了: \"\n",
+    "\n",
+    "url1=\"http://rihou.vip:66/\"   #  -花式主页\n",
+    "url11=\"http://lige.unaux.com/?url=https://o.nxog.top/nxog/nxog1.php?b=欧歌\" #多仓\n",
+    "url2=\"http://xn--6orp08a.4tvbox.v6.navy/无敌.json\"     #  -反炸\n",
+    "url3=\"https://agit.ai/leevi/PiG/raw/branch/master/jsm.json\"  #  -失败\n",
+    "url4=\"https://tvbox.meitufu.com/TVBox/tv.json\" #线路\n",
+    "url5=\"https://gitee.com/jiangnandao/tvboxline/raw/master/tvbox.json\" #-单仓\n",
+    "url6=\"http://530.my3v.work/xdck.json\" #-单仓\n",
+    "url7=\"https://cdn.jsdelivr.net/gh/GaiVmao/dianshiyuan@main/yuan2.txt\" #-单线\n",
+    "url8=\"https://raw.githubusercontent.com/xiqiliuse/tvbox/main/tvbox.json\"\n",
+    "url9=\"http://gh.whoneil.top/https://raw.githubusercontent.com/xiqiliuse/tvbox/main/tvbox.json\"\n",
+    "\n",
+    "def jiexi(urll):\n",
+    "        analysis_respone=re_findall(urll) #返回元组，第一个是url，第二个是respon，第三个是状态内容\n",
+    "        # cang=findvalue(analysis_respone[1])\n",
+    "        cang=refindvalue(analysis_respone[1])\n",
+    "        # print(\"shuchu--\",cang,analysis_respone)\n",
+    "\n",
+    "        if cang==\"H单仓\":\n",
+    "            print(analysis_respone[2]+\" 单仓\"+\"-\"+analysis_respone[0])\n",
+    "        elif cang==\"H多仓\":\n",
+    "            print(analysis_respone[2] +\" 多仓\"+\"-\"+analysis_respone[0])\n",
+    "        elif cang==\"H线路\":\n",
+    "            print(analysis_respone[2]+\" 线路\"+\"-\"+analysis_respone[0])\n",
+    "        else:\n",
+    "            # pass\n",
+    "            print(analysis_respone[2]+\" 其他failure \"+\"-\"+analysis_respone[0])\n",
+    "        print(\"=\"*30)\n",
+    "\n",
+    "# jiexi(url11)\n",
+    "# jiexi(url1)\n",
+    "# jiexi(url2)\n",
+    "# jiexi(url3)\n",
+    "# jiexi(url4)\n",
+    "# jiexi(url5)\n",
+    "\n",
+    "# 打开文件并读取内容\n",
+    "with open('strs.txt', 'r', encoding='utf-8') as file:\n",
+    "    for line in file:\n",
+    "        lineurl=line.strip()\n",
+    "        jiexi(lineurl)\n"
+   ]
   }
  ],
  "metadata": {
